# 2048-ncurses

./: .gitignore  Makefile  Makefile.in  README.md  configure  configure.ac  game.c  game.h  main.c  movements.c  movements.h
src/: Makefile.am  Makefile.in  game.c  game.h  main.c  movements.c  movements.h  tile.h  tilel.c  tilel.h  uinterface.c  uinterface.h
